--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.1.4",
     "antd": "^5.5.2",
     "chart.js": "^4.3.0",
+    "firebase": "^9.22.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
