--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
+    "@hookform/resolvers": "^3.1.0",
     "antd": "^5.5.2",
     "chart.js": "^4.3.0",
     "firebase": "^9.22.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2",
-    "vite-plugin-html": "^3.2.0"
+    "vite-plugin-html": "^3.2.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
